using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimatorValues
{
    public static string isWalking = "isWalking";
    public static string isShooting = "isShooting";
    public static string isAttacking = "isAttacking";
    public static string Attack = "Attack";
}

